Large speed up for data loading and bug fixes

--- a/tcapy/vis/report/templates/clean_report.html
+++ b/tcapy/vis/report/templates/clean_report.html
@@ -23,6 +23,8 @@
         https://www.cuemacro.com
         Powered by tcapy Python library
         https://www.github.com/cuemacro/tcapy
+
+        <b>{{generation_date}}</b>
       </address>
     </article>
 
